--- a/style/index.css
+++ b/style/index.css
@@ -50,3 +50,23 @@ img {
   opacity: 1;
   transform: scale(1);
 }
+
+[data-control="slide"] {
+  display: flex;
+  justify-content: center;
+}
+
+[data-control="slide"] li a {
+  display: block;
+  width: 20px;
+  height: 20px;
+  background-color: #fb5;
+  border-radius: 50%;
+  text-indent: -9999px;
+  margin: 5px;
+}
+
+[data-control="slide"] li.ativo a,
+[data-control="slide"] li a:hover {
+  background-color: #e54;
+}
