--- a/style/index.css
+++ b/style/index.css
@@ -58,8 +58,8 @@ img {
 
 [data-control="slide"] li a {
   display: block;
-  width: 20px;
-  height: 20px;
+  width: 40px;
+  height: 40px;
   background-color: #fb5;
   border-radius: 50%;
   text-indent: -9999px;
@@ -69,4 +69,50 @@ img {
 [data-control="slide"] li.ativo a,
 [data-control="slide"] li a:hover {
   background-color: #e54;
+}
+
+.custom-controls {
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+  flex-wrap: wrap;
+}
+
+.custom-controls li {
+  opacity: 0.8;
+  transform: scale(0.8);
+  width: 60px;
+  height: 60px;
+  overflow: hidden;
+  margin: 2px;
+  clip-path: circle();
+  transition: 0.3s;
+}
+
+.custom-controls li.ativo {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.arrow-nav {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 20px 0;
+}
+
+.arrow-nav button {
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  background-color: #fb5;
+  color: #ffffff;
+  width: 60px;
+  height: 60px;
+  background-image: url("../img/reshot-icon-button-arrow-right-W9BZ38CUD2.svg");
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+.arrow-nav button.prev {
+  transform: rotate(180deg);
 }
